@@ -49,7 +49,7 @@ public class FAggregateModuleOverlapDef {
     protected boolean isConnected() {
         List<Shape> processed = new ArrayList<>();
 
-        isConnectedRecurrence(this.aggregate.getRefParticles().asList().get(0), processed);
+        isConnectedRecurrence(this.aggregate.getRefParticles().asList().getFirst(), processed);
 
         return this.aggregate.getRefParticles().asList().size() == processed.size();
     }
@@ -73,8 +73,8 @@ public class FAggregateModuleOverlapDef {
     // -------------------------------------------------------------------------------------------------
 
     protected boolean touches(FAggregate arg) {
-        FPos3D centerRef = this.aggregate.getSpatialCenter();
-        FPos3D centerArg = arg.getSpatialCenter();
+        FPos3D centerRef = this.aggregate.getBoxCenter();
+        FPos3D centerArg = arg.getBoxCenter();
 
         double radiusRef = this.aggregate.getRadiusFrom(centerRef);
         double radiusArg = arg.getRadiusFrom(centerArg);
@@ -111,8 +111,8 @@ public class FAggregateModuleOverlapDef {
     }
 
     protected boolean overlaps(FAggregate arg) {
-        FPos3D centerRef = this.aggregate.getSpatialCenter();
-        FPos3D centerArg = arg.getSpatialCenter();
+        FPos3D centerRef = this.aggregate.getBoxCenter();
+        FPos3D centerArg = arg.getBoxCenter();
 
         double radiusRef = this.aggregate.getRadiusFrom(centerRef);
         double radiusArg = arg.getRadiusFrom(centerArg);
@@ -144,8 +144,8 @@ public class FAggregateModuleOverlapDef {
     }
 
     protected boolean overlapsWithShift(FAggregate arg, FVector shift) {
-        FPos3D centerRef = this.aggregate.getSpatialCenter();
-        FPos3D centerArg = arg.getSpatialCenter();
+        FPos3D centerRef = this.aggregate.getBoxCenter();
+        FPos3D centerArg = arg.getBoxCenter();
 
         double radiusRef = this.aggregate.getRadiusFrom(centerRef);
         double radiusArg = arg.getRadiusFrom(centerArg);
@@ -360,11 +360,11 @@ public class FAggregateModuleOverlapDef {
 
     private void getClusterVolumetricMethodPrecise(Shape shape, List<Double> volume) {
 
-        if (volume.size() < 1) {
+        if (volume.isEmpty()) {
             volume.add(0d);
         }
 
-        volume.set(0, volume.get(0) + shape.getVolumeAlgebraic());
+        volume.set(0, volume.getFirst() + shape.getVolumeAlgebraic());
     }
 
     private void getClusterVolumetricMethodApprox(Shape shape, List<Double> volume) {
@@ -389,7 +389,7 @@ public class FAggregateModuleOverlapDef {
         double volTmp;
         double volTotal = 0;
 
-        for (int i = 0 ; i < volume.size() ; i++) {
+        for (int i = 0 ; i < volume.size() - 1 ; i++) {
             results.add(0);
         }
 
